--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,14 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script src="../src/index.js"></script>
+  <script>$("#inpt_search").on('focus', function () {
+      $(this).parent('label').addClass('active');
+    });
+
+    $("#inpt_search").on('blur', function () {
+      if ($(this).val().length == 0)
+        $(this).parent('label').removeClass('active');
+    });</script>
 </body>
 
 </html>
