--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,14 +18,16 @@
 
 <body>
   <!-- loading layout replaced by app after startupp -->
-  <div class="app-loading">
-    <div class="logo"><img src="./logo.ico"></div>
-    <svg class="spinner" viewBox="25 25 50 50">
-      <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
-    </svg>
-  </div>
+
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root">
+    <div class="app-loading">
+      <div class="logo"><img src="./logo.ico"></div>
+      <svg class="spinner" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+      </svg>
+    </div>
+  </div>
   <script src="../src/index.js"></script>
 </body>
 
