--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,8 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/logopalccontour.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#e0860b" />
   <style type="text/css">
-    body,
-    html {
-      height: 100%;
-    }
-
     .app-loading {
       position: relative;
       display: flex;
@@ -40,7 +35,7 @@
       stroke-dashoffset: 0;
       animation: dash 1.5s ease-in-out infinite;
       stroke-linecap: round;
-      stroke: #ddd;
+      stroke: #e0860b;
     }
 
     @keyframes rotate {
