--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,9 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/logopalccontour.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="theme-color" content="#e0860b" />
+  <meta name="theme-color" content="#000000" />
   <style type="text/css">
     .app-loading {
-      position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
