--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <style type="text/css">
     .app-loading {
-      display: flex;
+      display: block;
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -75,7 +75,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
     <div class="app-loading">
-      <img style="margin: auto;" src="./logo.ico">
+      <img src="./logo.ico">
       <svg class="spinner" viewBox="25 25 50 50">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
       </svg>
