--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <style type="text/css">
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -40px;
+      margin-top: -50px;
+    }
+
     .app-loading {
       display: block;
       flex-direction: column;
