--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <style type="text/css">
-    img {
+    #icon_spinner {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -83,7 +83,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
     <div class="app-loading">
-      <img src="./logo.ico">
+      <img id="icon_spinner" src="./logo.ico">
       <svg class="spinner" viewBox="25 25 50 50">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
       </svg>
