--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,11 +9,13 @@
   <meta name="theme-color" content="#000000" />
   <style type="text/css">
     #icon_spinner {
+      width: 100px;
+      height: 90px;
       position: absolute;
       top: 50%;
       left: 50%;
-      margin-left: -40px;
-      margin-top: -50px;
+      margin-left: -50px;
+      margin-top: -45px;
     }
 
     .app-loading {
@@ -83,7 +85,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
     <div class="app-loading">
-      <img id="icon_spinner" src="./logo.ico">
+      <img id="icon_spinner" src="./logopalc.png">
       <svg class="spinner" viewBox="25 25 50 50">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
       </svg>
