Testing another loader

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,9 @@
       left: 370px;
     }
 
+    body {
+      background: rgb(100, 57, 0);
+    }
 
     #text {
       position: absolute;
@@ -558,22 +561,23 @@
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
       </svg>
     </div> -->
-    <div id="glass">
-      <div id="beer"></div>
+    <div id="icon_spinner">
+      <div id="glass">
+        <div id="beer"></div>
+      </div>
+      <div id="poignet"></div>
+      <div id="mousse_1"></div>
+      <div id="mousse_2"></div>
+      <div id="mousse_3"></div>
+      <div id="mousse_4"></div>
+      <div id="mousse_5"></div>
+      <div id="mousse_volante"></div>
+      <div id="mousse_interieur"></div>
+      <div id="mousse_interieur_2"></div>
+      <div id="mousse_interieur_3"></div>
+      <div id="mousse_interieur_4"></div>
+      <p id="beer_text">PALC</p>
     </div>
-    <div id="poignet"></div>
-    <div id="mousse_1"></div>
-    <div id="mousse_2"></div>
-    <div id="mousse_3"></div>
-    <div id="mousse_4"></div>
-    <div id="mousse_5"></div>
-    <div id="mousse_volante"></div>
-    <div id="mousse_interieur"></div>
-    <div id="mousse_interieur_2"></div>
-    <div id="mousse_interieur_3"></div>
-    <div id="mousse_interieur_4"></div>
-    <p id="beer_text">PALC</p>
-
   </div>
   <script src="../src/index.js"></script>
 </body>
