--- a/client/public/index.html
+++ b/client/public/index.html
@@ -96,6 +96,7 @@
     </div>
   </div>
   <script src="../src/index.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
 
 </html>
