--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/logopalccontour.png" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/logopalc.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#643900" />
@@ -89,7 +89,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
     <div class="app-loading">
-      <img id="icon_spinner" src="./logopalc.png">
+      <img id="icon_spinner" src="../logopalc.png">
       <svg class="spinner" viewBox="25 25 50 50">
         <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
       </svg>
